--- a/ic-dbms-canister/Cargo.toml
+++ b/ic-dbms-canister/Cargo.toml
@@ -25,6 +25,7 @@ candid = { workspace = true }
 getrandom = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
+ic-dbms-api = { version = "0.0", path = "../ic-dbms-api" }
 ic-dbms-macros = { version = "0.0", path = "../ic-dbms-macros" }
 like = { workspace = true }
 rust_decimal = { workspace = true }
