--- a/ic-dbms-api/Cargo.toml
+++ b/ic-dbms-api/Cargo.toml
@@ -22,6 +22,7 @@ readme = "../README.md"
 
 [dependencies]
 candid = { workspace = true }
+getrandom = { workspace = true }
 ic-cdk = { workspace = true }
 ic-dbms-macros = { version = "0.0", path = "../ic-dbms-macros" }
 like = { workspace = true }
